--- a/src/main/resources/yukihane/dq10bzrjava/main/MainView.fxml
+++ b/src/main/resources/yukihane/dq10bzrjava/main/MainView.fxml
@@ -4,11 +4,11 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.VBox?>
 <VBox alignment="CENTER" xmlns:fx="http://javafx.com/fxml"
-	  fx:controller="yukihane.dq10bzrjava.HelloWorldView">
-	<children>
-		<Label fx:id="helloLabel"/>
-	</children>
-	<padding>
-		<Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
-	</padding>
+      fx:controller="yukihane.dq10bzrjava.main.MainView">
+  <children>
+    <Label fx:id="helloLabel"/>
+  </children>
+  <padding>
+    <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+  </padding>
 </VBox>
