--- a/src/main/resources/yukihane/dq10bzrjava/main/MainView.fxml
+++ b/src/main/resources/yukihane/dq10bzrjava/main/MainView.fxml
@@ -1,14 +1,36 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.VBox?>
-<VBox alignment="CENTER" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="yukihane.dq10bzrjava.main.MainView">
-  <children>
-    <Label fx:id="helloLabel"/>
-  </children>
-  <padding>
-    <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
-  </padding>
-</VBox>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import java.lang.*?>
+<?import javafx.scene.layout.*?>
+
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.45" xmlns:fx="http://javafx.com/fxml/1" fx:controller="yukihane.dq10bzrjava.main.MainView">
+   <top>
+      <HBox prefHeight="10.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+         <children>
+            <Label text="ID">
+               <HBox.margin>
+                  <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
+               </HBox.margin></Label>
+            <Label fx:id="idLabel" minWidth="100.0">
+               <HBox.margin>
+                  <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
+               </HBox.margin></Label>
+            <Label text="Character">
+               <HBox.margin>
+                  <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
+               </HBox.margin></Label>
+            <Label fx:id="characterLabel" minWidth="100.0">
+               <HBox.margin>
+                  <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
+               </HBox.margin></Label>
+            <Pane prefHeight="200.0" prefWidth="200.0" HBox.hgrow="ALWAYS" />
+            <Button mnemonicParsing="false" text="Log in">
+               <HBox.margin>
+                  <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
+               </HBox.margin></Button>
+         </children>
+      </HBox>
+   </top>
+</BorderPane>
