--- a/src/main/resources/yukihane/dq10bzrjava/main/MainView.fxml
+++ b/src/main/resources/yukihane/dq10bzrjava/main/MainView.fxml
@@ -21,10 +21,11 @@
                <HBox.margin>
                   <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
                </HBox.margin></Label>
-            <Label fx:id="characterLabel" minWidth="100.0">
+            <ComboBox fx:id="characterComboBox" prefWidth="150.0">
                <HBox.margin>
                   <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
-               </HBox.margin></Label>
+               </HBox.margin>
+            </ComboBox>
             <Pane minWidth="1.0" prefWidth="1.0" HBox.hgrow="ALWAYS" />
             <Button mnemonicParsing="false" onAction="#loginAction" text="Log in">
                <HBox.margin>
