ログイン後のキャラクタ選択完了まで

--- a/src/main/resources/yukihane/dq10bzrjava/main/MainView.fxml
+++ b/src/main/resources/yukihane/dq10bzrjava/main/MainView.fxml
@@ -9,23 +9,15 @@
    <top>
       <HBox prefHeight="10.0" prefWidth="200.0" BorderPane.alignment="CENTER">
          <children>
-            <Label text="ID">
+            <Label text="login character">
                <HBox.margin>
                   <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
                </HBox.margin></Label>
-            <Label fx:id="idLabel" minWidth="100.0">
-               <HBox.margin>
-                  <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
-               </HBox.margin></Label>
-            <Label text="Character">
-               <HBox.margin>
-                  <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
-               </HBox.margin></Label>
-            <ComboBox fx:id="characterComboBox" prefWidth="150.0">
+            <Label fx:id="characterLabel" minWidth="200.0">
                <HBox.margin>
                   <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
                </HBox.margin>
-            </ComboBox>
+            </Label>
             <Pane minWidth="1.0" prefWidth="1.0" HBox.hgrow="ALWAYS" />
             <Button mnemonicParsing="false" onAction="#loginAction" text="Log in">
                <HBox.margin>
