--- a/src/main/resources/yukihane/dq10bzrjava/main/MainView.fxml
+++ b/src/main/resources/yukihane/dq10bzrjava/main/MainView.fxml
@@ -5,7 +5,7 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.45" xmlns:fx="http://javafx.com/fxml/1" fx:controller="yukihane.dq10bzrjava.main.MainView">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="599.0" xmlns="http://javafx.com/javafx/8.0.45" xmlns:fx="http://javafx.com/fxml/1" fx:controller="yukihane.dq10bzrjava.main.MainView">
    <top>
       <HBox prefHeight="10.0" prefWidth="200.0" BorderPane.alignment="CENTER">
          <children>
@@ -26,4 +26,55 @@
          </children>
       </HBox>
    </top>
+   <left>
+      <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
+         <children>
+            <GridPane minWidth="300.0">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                  <Label text="種類" />
+                  <Label text="種類2" GridPane.rowIndex="1" />
+                  <Label text="アイテム名" GridPane.rowIndex="2" />
+                  <Label text="装備可能職業" GridPane.rowIndex="3" />
+                  <Label text="装備レベル下限" GridPane.rowIndex="4" />
+                  <Label text="装備レベル上限" GridPane.rowIndex="5" />
+                  <Label text="できの良さ" GridPane.rowIndex="6" />
+                  <Label text="錬金効果数" GridPane.rowIndex="7" />
+                  <Label text="錬金効果1" GridPane.rowIndex="8" />
+                  <Label text="効果の合計値1" GridPane.rowIndex="9" />
+                  <Label text="錬金効果2" GridPane.rowIndex="10" />
+                  <Label text="効果の合計値2" GridPane.rowIndex="11" />
+                  <Label text="難易度下限" GridPane.rowIndex="12" />
+                  <Label text="難易度上限" GridPane.rowIndex="13" />
+                  <ComboBox fx:id="largeCategoryCb" prefWidth="150.0" GridPane.columnIndex="1" />
+               </children>
+            </GridPane>
+            <HBox prefHeight="20.0" prefWidth="40.0">
+               <children>
+                  <Pane minWidth="1.0" prefWidth="1.0" HBox.hgrow="ALWAYS" />
+                  <Button mnemonicParsing="false" text="パラメータ生成" />
+               </children>
+            </HBox>
+         </children>
+      </VBox>
+   </left>
 </BorderPane>
