出来の良さ選択

--- a/src/main/resources/yukihane/dq10bzrjava/main/MainView.fxml
+++ b/src/main/resources/yukihane/dq10bzrjava/main/MainView.fxml
@@ -68,6 +68,7 @@
                   <ComboBox fx:id="cbLargeCategory" prefWidth="150.0" GridPane.columnIndex="1" />
                   <ComboBox fx:id="cbSmallCategory" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                   <ComboBox fx:id="cbItemCount" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                  <ComboBox fx:id="cbQuality" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="6" />
                </children>
             </GridPane>
             <HBox prefHeight="20.0" prefWidth="40.0">
